
    grid.show.layout() now uses format() for annotating layout
    widths and heights.

2.  More robust handling of NA values in graphical parameter settings
    that affect text.  NA values for fontsize, lineheight, cex, and
    fontfamily are ignored, i.e., inherited from parent drawing context.
    A mixture of NA and non-NA generates an error.


Changes from grid_3.2.* to grid_3.3.0:
-------------------------------------

1.  Added "pseudonym" units to check made in absolute.size() so that,
    for example, absolute.size(unit(1, "in")) works properly
    (reported by Baptiste Auguie).

2.  Registered absolute.units() methods in NAMESPACE, so that, for
    example, a call to absolute.size(unit(1,"npc") + unit(2,"mm"))
    works outside of 'grid' (reported by Baptiste Auguie).

3.  Refactored grid.draw() so that grid.draw(NULL) now works 
    (by doing nothing).  Reported by Hadley Wickham.

4.  Modified grid.ls() so that it returns nothing if there are no
    active devices (rather than opening a new device).
  
5.  Modified grid.grep() so that it returns an empty list (rather than
    throwing an error) when the 'grid' display list is empty.

6.  Added subassignment methods for unit objects
    (e.g., x <- unit(1:3, "cm"); x[2] <- unit(.5, "npc"))

    Thanks to Baptiste Auguie for code suggestions.


Changes from grid_3.1.* to grid_3.2.0:
-------------------------------------

1.  Fixed evaluation of "pure null" units (by making evaluation recursive).
    Previously, for example, a unit list with a unit list as its first
    component would evaluate to NA.  This typically only affects layouts 
    in grid.

    Problem reported by Baptiste Auguie.

2.  Fixed problem in validDetails.beziergrob(), which used to fail if
    you tried to specify 'id.lengths'

3.  Fixed bug in downViewport() when descending more than one
    viewport.  It was possible for this to end up with the wrong
    clipping region (because if you ended up in a viewport that